# PamOlive

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gateway  Dockerfile.guacamole  Dockerfile.postgres  Dockerfile.test  GOVERNANCE.md  Makefile  NOTICE  README.md  SECURITY.md  compose.yml  install.ps1  install.sh  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
config/: asgi.py  celery.py  runtime_secrets.py  urls.py
deploy/: Caddyfile  Caddyfile.rdp
docs/: architecture.md  development.md  index.md  installation.md  oidc.md  operations.md  permissions.md  rdp.md  security.md  v1-report.md  v1-scope.md  vault-transit.md
keyring/: Dockerfile  app.py  backends.py  init_keyring_tls.py  init_redis_tls.py  pyproject.toml  rate_limit.py  requirements.txt
scripts/: backup.sh  bootstrap.ps1  bootstrap.sh  check-isolation.sh  init-recordings.sh  postgres-gosu-compat.sh  restore-rehearsal.sh  verify-backup.sh  wait-for-stack.sh
templates/: account.html  base.html  dashboard.html  passwords.html  requests.html  targets.html
tests/: test_account.py  test_admin_resources.py  test_approval_quorum.py  test_approvals.py  test_audit_integrity.py  test_connector_adapters.py  test_console.py  test_console_approvals.py  test_directory_sync.py  test_domains.py  test_gateway.py  test_gateway_clients.py  test_health.py  test_host_keys.py  test_identity_sources.py  test_keyring_client.py  test_keyring_crypto_backends.py  test_keyring_migration.py  test_keyring_rate_limit.py  test_keyring_tls_init.py  test_mfa.py  test_operations_health.py  test_outbound_security.py  test_personal_vault.py  test_policy_constraints.py  test_rbac.py  test_rdp.py  test_redis_tls_init.py  test_reproducible_builds.py  test_restore_verification.py  test_rotation.py  test_runtime_secrets.py  test_secret_leases.py  test_session_frontend.py  (+8 more)
(+277 files in other folders)
